# rust-seminar-exercises

./: Cargo.toml  README.md
crates/seminar-node/: Cargo.toml
crates/seminar-node/src/: daemon.rs  error.rs  lib.rs  node.rs  peer.rs
crates/seminard/: Cargo.toml
crates/seminard/src/: lib.rs
task-1/: Dockerfile  docker-compose.yml
task-2/: Cargo.toml
task-2/src/: main.rs
task-3/: Cargo.toml
task-4/: Cargo.toml
task-4/src/: main.rs
