[package]
name = "seminar-node"
version = "0.0.4"
edition = "2024"

[dependencies]
bitcoin = "0.32.5"
log = "0.4.27"
rand = "0.9.0"
rusqlite = "0.35.0"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
bytes = "1.10.1"
